--- a/Hopeline/appsettings.json
+++ b/Hopeline/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+	"AllowedHosts": "*",
+	"ConnectionStrings": {
+		"HopelineDbConnection": "server=desktop-guuo2i0\\sqlexpress;database=A_HOPELINE_DEV;Trusted_Connection=true"
+	}
 }
